deploy/flux/management-portal/management-portal.securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: management-portal-basic-auth
  namespace: alcopilot
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: management-portal
  basicAuth:
    users:
      name: management-basic-auth
